<resources>
    <string name="app_name">SendKeys</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="enter">ENTER</string>
    <string name="title_activity_main">SendKeys</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="rememberEmail">Remember Email Address</string>
    <string name="signUp">Click here to Sign Up</string>
    <string name="Logo">logo</string>
    <string name="title_activity_first">firstActivity</string>
    <string name="name">Name</string>
    <string name="title_activity_sign_up_form">signUpForm</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="next"><![CDATA[Next>>>]]></string>
    <string name="newEmail">Email</string>
    <string name="full_name">Full Name</string>
    <string name="newPassword">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="tell_us_about_you">Tell Us About You</string>
    <string name="submit">Submit</string>
    <string name="return_to_login">Account exists??? <br/> Click here to return to Login</string>
</resources>
